# sp-hackaton

./: .gitmodules  Animation_image_test.py  Animation_plot_test.py  build.py  charge_stability_video_mode.py  configuration.py  create_coco.py  generate_stability_maps.py  generate_stability_maps_test.py  generate_stability_maps_test_random.py  pyproject.toml  test.py  test2.py
sp/: sp_funcs.c  sp_funcs.cpp  sp_funcs.pyx  streaming.h
training_dataset_2/: device_0_realization_0_diag1_58_diag2_26_hor_4_width_1_noise_213_x0_26_y0_37.txt  device_0_realization_1_diag1_58_diag2_26_hor_4_width_1_noise_84_x0_19_y0_20.txt  device_0_realization_2_diag1_58_diag2_26_hor_4_width_1_noise_166_x0_31_y0_41.txt  device_0_realization_3_diag1_58_diag2_26_hor_4_width_1_noise_252_x0_38_y0_44.txt  device_0_realization_4_diag1_58_diag2_26_hor_4_width_1_noise_179_x0_26_y0_29.txt  device_0_realization_5_diag1_58_diag2_26_hor_4_width_1_noise_164_x0_44_y0_20.txt  device_0_realization_6_diag1_58_diag2_26_hor_4_width_1_noise_174_x0_26_y0_60.txt  device_0_realization_7_diag1_58_diag2_26_hor_4_width_1_noise_227_x0_38_y0_19.txt  device_0_realization_8_diag1_58_diag2_26_hor_4_width_1_noise_276_x0_44_y0_18.txt  device_0_realization_9_diag1_58_diag2_26_hor_4_width_1_noise_111_x0_42_y0_38.txt  device_10_realization_0_diag1_58_diag2_28_hor_2_width_2_noise_87_x0_17_y0_43.txt  device_10_realization_1_diag1_58_diag2_28_hor_2_width_2_noise_1_x0_17_y0_50.txt  device_10_realization_2_diag1_58_diag2_28_hor_2_width_2_noise_107_x0_15_y0_54.txt  (+485 more)
